apps/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: apps
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.2
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  selector:
    app: adguard-home
